# Note2tex

./: README.md
genai_proj/: main.ipynb  pyproject.toml  setup.cfg
genai_proj/note2tex/: __init__.py  beautifier_agent.py  bedrock_llm.py  cli.py  latex_assembler.py  latex_stylist.py  preamble.fdb_latexmk  preamble.fls  preamble.tex  section_generator.py  section_refiner.py  section_validator.py
genai_proj/note2tex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
genai_proj/note2tex/utils/: cleanup.py  constants.py  image_grouping.py
genai_proj/output/: final_beautiful.tex  final_beautiful_high.tex  final_beautiful_high_raw.tex  final_beautiful_raw.tex  test_medium.tex  test_medium_raw.tex
